Set default log level to WARN

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,9 +1,9 @@
-log4j.logger.es.udc.gac.bigdec=INFO, A1
-log4j.logger.org.apache.flink.api.java.hadoop=INFO, A1
+log4j.logger.es.udc.gac.bigdec=WARN, A1
+log4j.logger.org.apache.flink.api.java.hadoop=WARN, A1
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.shaded.apache.log4j.ConsoleAppender
 
 # A1 uses PatternLayout.
 log4j.appender.A1.layout=org.shaded.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%-5p [BigDEC] %d{ISO8601} %c{1}[%t][%M:%L]: %m%n
+log4j.appender.A1.layout.ConversionPattern=%-5p [BiDEC] %d{ISO8601} %c{1}[%t][%M:%L]: %m%n
