Remove thread name from logging

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -6,4 +6,4 @@ log4j.appender.A1=org.shaded.apache.log4j.ConsoleAppender
 
 # A1 uses PatternLayout.
 log4j.appender.A1.layout=org.shaded.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%-5p [BigDEC] %d{ISO8601} %c{1}[%t][%M:%L]: %m%n
+log4j.appender.A1.layout.ConversionPattern=%-5p [BigDEC] %d{ISO8601} %c{1}[%M:%L]: %m%n
