--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -2,8 +2,8 @@ log4j.logger.es.udc.gac.bigdec=WARN, A1
 log4j.logger.org.apache.flink.api.java.hadoop=WARN, A1
 
 # A1 is set to be a ConsoleAppender.
-log4j.appender.A1=org.shaded.apache.log4j.ConsoleAppender
+log4j.appender.A1=org.apache.log4j.ConsoleAppender
 
 # A1 uses PatternLayout.
-log4j.appender.A1.layout=org.shaded.apache.log4j.PatternLayout
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-5p [BigDEC] %d{ISO8601} %c{1}[%M:%L]: %m%n
