--- a/conf/config.properties.template
+++ b/conf/config.properties.template
@@ -48,7 +48,7 @@ SPARK_SHUFFLE_PARTITIONS=1
 ###################
 # Flink API
 # Supported values: Dataset and Datastream
-FLINK_API=Datastream
+FLINK_API=Dataset
 
 # Enabling the object reuse mode instructs the Flink runtime to reuse
 # user objects for potential better performance
