--- a/conf/config.properties.template
+++ b/conf/config.properties.template
@@ -58,6 +58,12 @@ FLINK_OBJECT_REUSE=true
 # when multiple correction algorithms are executed
 FLINK_MULTIPLE_JOB=true
 
+# Enable the pre-shuffle aggregate operator for Datastream API
+FLINK_PRE_SHUFFLE_AGGREGATOR=true
+
+# When the limit is reached, the pre-aggregate operator will emit events downtream
+FLINK_PRE_SHUFFLE_AGGREGATOR_LIMIT=262144
+
 ###################
 # HDFS
 ###################
