--- a/conf/config.properties.template
+++ b/conf/config.properties.template
@@ -63,7 +63,7 @@ FLINK_WRITE_KMERS=false
 
 # Launch two merger threads for paired-end datasets. This option is only significant
 # when merge is enabled and MULTITHREAD_MERGE=true
-FLINK_PAIRED_MERGE=false
+FLINK_PAIRED_MERGE=true
 
 # Enable the pre-shuffle aggregate operator. Only significant for Datastream API
 FLINK_PRE_SHUFFLE_AGGREGATOR=true
