--- a/conf/config.properties.template
+++ b/conf/config.properties.template
@@ -61,7 +61,7 @@ FLINK_MULTIPLE_JOB=true
 # Write non-unique k-mers to HDFS
 FLINK_WRITE_KMERS=false
 
-# Correct paired-end datasets using single-end mode when set to false
+# When set to false, correct paired-end datasets using single-end mode
 FLINK_PAIRED_MODE=true
 
 # Enable the pre-shuffle aggregate operator. Only significant for Datastream API
